sourceCompatibility = 11 // for the IDE support

dependencies {
    //compile project(":LibraryManager")
	compileOnly group: 'io.netty', name: 'netty-all', version: '4.1.59.Final'
	compileOnly group: 'com.ip2location', name: 'ip2location-java', version: '8.5.0'
	compileOnly group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
	compileOnly group: 'com.github.oshi', name: 'oshi-core', version: '5.5.0'

}

jar{
	manifest {
		 attributes 'Main-Class': 'com.github.dr.rwserver.Main'
		 attributes 'Launcher-Agent-Class': 'com.github.dr.rwserver.dependent.LibraryManager'
	}
}